@@ -1,10 +1,6 @@
-AUX app.ini 921 BLAKE2B 99a23edacd0be7c6717b941630d5b538a86542de835255bd609c15a39f72ff9c2e7fd6df2f65f480e922154e9acdc3ead8d1e861bba889ba30ad6debd46c32e5 SHA512 334a2458c745e1f52e82f0d62bdcb52dd673104154335acd23aca94c2f99893b6ee4432fc1ca15672a98293f27ed8948f3553c2f51d9caec594f7d85aea38094
 AUX app.ini-1.6.2 769 BLAKE2B 6203c9ef0b3d812a3de3e130238412a56eb2bbe57f9fe5d82da9b72b655f6f0031d5a78062fa9d3d578990e7455d7592315ec9b34d4a07b28c6209bb2997d2bd SHA512 ea8475f7ce6032149392717facd90aabc26b4b308df2c25b202e1a90bcea154914d6ddf2e7672d65c0673c224145099eca059db37fd9efe0edd296452d60aa4f
-AUX drone-runner-docker.service 481 BLAKE2B 01d977fa568cabc418f3d10ed9a7a4d658f5d1e0e3112baee6d7b850402a870932b3fa302fa009f300b00c01a28aa4f966caaa281639d606b50ce8c437d36003 SHA512 6229bee7b9c713b97a6110d0f023c2586678a16aed49a0259623941bafb99f2f713aca696abb2dc40c929c7fea6e0496c8af071a3d43f860858176fe4ad5566f
 AUX drone-runner-docker.service-1.6.2 371 BLAKE2B 1ffb5f836d87c444acbd494b2315ee2222a332566693553ec8fa12c4291185f8c417f6630d2093c7f978c3e65c10243b944c751b1f5c29116c4cba196103553a SHA512 619d1c65e91af40e1affed7b23edb00ec25d9a5b1ea6812931d86f716ca9e8ed40c605b6a45966b296ff623c66a9169b0ddac1ebdc4de7194fafd5efd683baf0
-AUX drone-runner-docker.sh 612 BLAKE2B becd739d917e1c924deeb297749034639591e02f5f3f11a60241b74d8edfd927f098ca17a5ccedc5d470b8279715eab9e92ae6d21d78b6d81f059089cb89d8be SHA512 ed2c6ce725467ca038eed6a66974a76bc61931aea89eed33ee4a1752cc30000d08671c52f84be1c582f3beb2ebbddf9240f975cfdb1a543abe527465ea5ff6a0
 DIST cloud.google.com%2Fgo%2F@v%2Fv0.26.0.mod 27 BLAKE2B 814b0fa8f12d5ce6171fa629b5a7eb34e0e882cc0c5430986896bb38c243e08dc83098f271227f4ba019e78f16dc97fbb381e833aff1819833d243b08add916b SHA512 5132f3438533427c0ab0fbb7a12112a7830ea9122662ed46019ff89c71d9cf80c02edc32dd5c892da572031b5a2cce100f2602fa6a19bea6be7c02781f701273
-DIST drone-runner-docker-1.6.2.tar.gz 59640 BLAKE2B ef89d275b29a4d7fe7407910b70cfd08f9e977d3c94fcaaf20fc05bf3a53e471e2d7660d676792829ea765696ee0747cb3b4a7cef33c163a8bf40df25686ea94 SHA512 f6a0190cce387c791bb59e91815ac4d617f3985e7f974d10b2b782c9e209c08943477da73eaa5cfb95e69b5cacb1c3feeac6ad0af22981268bfa676e656884b9
 DIST drone-runner-docker-1.6.3.tar.gz 59814 BLAKE2B 0bea0ca1cfb28f543437c73e3f6e60e100ed1c2a947c56ee59256f14696983d0340a5c08c3a2539c5acff2da9d0a568c6a04914bb763dd08b8dec0f3d006386f SHA512 0d1949d070bf9e088477569f10282178437e5b64b12a989e32d4dae1524d9290feb32690e4ae31e5e2a75b0bd291daf0a8373cdd574add97ef7cb9d75aeb8d5c
 DIST github.com%2F!azure%2Fgo-ansiterm%2F@v%2Fv0.0.0-20170929234023-d6e3b3328b78.mod 36 BLAKE2B 52a2c5272e004524397df00dfa03b4c2d2ebd985a0c974236aad6b847d6b2b4b7c9b69ef48e263f4c67983b845b020d2004fe749b46fee3c0525da0416b20f3e SHA512 350a16c68553738ce8c2f4a6ac8beba66a7dcf2386a42aff938ebaa3bdc526bda8e5c51c493331eda4666cbcf8411ee7ca3aeb0768cc4f557f34585960f9eb84
 DIST github.com%2F!azure%2Fgo-ansiterm%2F@v%2Fv0.0.0-20170929234023-d6e3b3328b78.zip 32735 BLAKE2B 5de266d7400ae80c027f209cea91c911e22b0ff4fc6a2e964e8906f1a86cc6905b9c12d2588d5fdc91d0d8e9501a0ddf2f7a376cca9935d21943386c3ef31979 SHA512 72621865ffc0cadd27603e2f4032f1cd9c9d8bdcb920b3ca9fd02dbf88e52876a6f092c5b74eceb136021c514b68dc599f0cbbf18ed1620b827d46462aa55e32
@@ -183,10 +179,6 @@ DIST gotest.tools%2F@v%2Fv2.2.0+incompatible.mod 20 BLAKE2B 25d11078b1caa5a705f3
 DIST gotest.tools%2F@v%2Fv2.2.0+incompatible.zip 88327 BLAKE2B 8730134244a00fb47b24b347ee4758fac8c11e3f627788c03d6568af129acb5b911b08857ab77a619bf571986ee90dd1c6c6aa12fd8e6e26d395a64bb7513a8b SHA512 66a13fedc358399644b869ac4b39a295c6c15d642e074ec66ff042e1b109f9603bc941ff25aaf7d9bc700f6c2fb1f60bf2a637a471e26ae037d822f0f1e2c518
 DIST honnef.co%2Fgo%2Ftools%2F@v%2Fv0.0.0-20190102054323-c2f93a96b099.mod 26 BLAKE2B db6cc87a17bed88b955e6b36a17568930239c94a969211b02c2d5acc70386fbea63ac44365a0d3241e900125bd64644d698d8f1bdcabc3e6cf99c47259c63df5 SHA512 d00ae74b24e7fb3ff351ff68b88e59636153bbcf92b36e81e91556e3e75a7ccfb08ce471f757f92fd7612378944de3d7309c73923812e2df6a26b74e999ca9ce
 DIST honnef.co%2Fgo%2Ftools%2F@v%2Fv0.0.0-20190523083050-ea95bdfd59fc.mod 26 BLAKE2B db6cc87a17bed88b955e6b36a17568930239c94a969211b02c2d5acc70386fbea63ac44365a0d3241e900125bd64644d698d8f1bdcabc3e6cf99c47259c63df5 SHA512 d00ae74b24e7fb3ff351ff68b88e59636153bbcf92b36e81e91556e3e75a7ccfb08ce471f757f92fd7612378944de3d7309c73923812e2df6a26b74e999ca9ce
-EBUILD drone-runner-docker-1.5.2-r1.ebuild 922 BLAKE2B 9c2fa3bc7956ad881f90c5c2503b9075fc9409e32099825c01c9da64e9d4559cf646fe597470e7527843ce308b9a24c88356e7d7ccb9dedf3f25da6dd96aff1f SHA512 8355b65eca92a74f34ed81878b3d1627ea9a80334f8c83eb17cba1527cb76adfe47c599afcf97de9a12650af679fe2109ab71c594541d174d35b01428399a0a4
-EBUILD drone-runner-docker-1.6.0.ebuild 923 BLAKE2B f2ff442cad45758aac9865ad3bf324d0cb6f98cc1994792fc93c9f47b12ecde27502db287630f4dbda9f99f0fce11d9d87ef92c9653f2dbb61efe1ad201eeabd SHA512 042672861c638566297fc4295d53a67f4c014e2f582189ae46e26fb56e913dcfa4a1ccabf6798526c2d1c2017f965bd21baf22ce5ee9304d6db5002c063320db
-EBUILD drone-runner-docker-1.6.1.ebuild 923 BLAKE2B f2ff442cad45758aac9865ad3bf324d0cb6f98cc1994792fc93c9f47b12ecde27502db287630f4dbda9f99f0fce11d9d87ef92c9653f2dbb61efe1ad201eeabd SHA512 042672861c638566297fc4295d53a67f4c014e2f582189ae46e26fb56e913dcfa4a1ccabf6798526c2d1c2017f965bd21baf22ce5ee9304d6db5002c063320db
-EBUILD drone-runner-docker-1.6.2.ebuild 10881 BLAKE2B 12c7f061e3574b3ed81f1d7af9164d9075e8fa94ac9a81d986ba1f749d506bebd640d8e7f920eb7594b72e50a7f4975e252b61f82bd3065503558bb89b5ee427 SHA512 c0ca8456ae4f8955238329a3f50d643c90e4b04bccadd37bebc1f8471d8f53bc352afbe8605524ea4091a7a3ddf93f4ac4811ea3b2ffd1bc3ba484de620fd40e
 EBUILD drone-runner-docker-1.6.3.ebuild 10934 BLAKE2B e501a511290ecc6fadfd6a8cf8758285b8025b8e2a40894f71bd09acb21d9718c3efe5dceefbdf0d9b9825a5647cf8659e4c56173b4e09b4ec0efa2fbd3b531b SHA512 05f477e1e12a43401323d53b4b5112d649d474b790ebd8f178c8f02ec986421c96a853ad4b6a7eaee42c591163b22c10e51ea3cb7455e3a7c61a913bee508b8b
-MISC ChangeLog 1243 BLAKE2B ce62050938d84373766ef143bfa993ed0ea9e110938b4584fe940433c84dc08fa1d3fbe56887766144cc8c5d80ce8473d567e4fd793367159713a93e114d33ea SHA512 427f4e8e035a64523c2f02a9fd79f180c8d25a26746f6ae89808db151fb013f18c156e9ddf70723d95cc6144f29fb4e9cbf525072084d829e627fd5e4399d9af
+MISC ChangeLog 1580 BLAKE2B a1aadb6af56d43c390d70076461691a2de4ae0403f46f596050c469d8970c24c37746c50b701de94fbc3c7b7d9f210198041ccba54d2332ac608c25321138efa SHA512 94904d6e39d7bf9d4c36c93f8fd2914743c59f90c3c5f51a6d011bc9cc658a7565cd8c759016e32910d273f9bf68892661cd5b4dd084e59ffd4f02a47a2e7eef
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
