@@ -1,23 +1,0 @@
-[Unit]
-Description=drone.io docker runner
-Documentation=https://docs.drone.io/
-
-After=docker.service
-After=network.target
-Requires=docker.service
-Requires=network.target
-
-[Service]
-User=drone-runner-docker
-Group=drone-runner-docker
-
-Environment="RUNNER_CONFIG_FILE=/etc/drone-runner-docker/app.ini"
-
-ExecStart=drone-runner-docker.sh
-ExecStop=docker container stop drone-runner
-ExecStopPost=docker container rm drone-runner
-
-Restart=on-failure
-
-[Install]
-WantedBy=multi-user.target
