@@ -1,3 +1,10 @@
+  30 Apr 2022; Manuel Friedli <manuel@gentoo.org>
+  -drone-runner-docker-1.5.2-r1.ebuild, -drone-runner-docker-1.6.0.ebuild,
+  -drone-runner-docker-1.6.1.ebuild, -drone-runner-docker-1.6.2.ebuild,
+  -files/app.ini, -files/drone-runner-docker.service,
+  -files/drone-runner-docker.sh:
+  dev-util/drone-runner-docker: Clean up old stuff.
+
 *drone-runner-docker-1.6.3 (23 Feb 2021)
 
   23 Feb 2021; Manuel Friedli <manuel@gentoo.org>
